Issue #3399956 by shashwat-tiwari, nod_, Gauravvvv, Meeni_Dhobale, ahsannazir, sakthi_dev, Kanchan Bhogade, shweta__sharma, joachim, Mithun S, smustgrave, saschaeggi, xjm, Anilu@: Tab highlights for current/hover/click are too high up when other tabs have 2 lines of text
(cherry picked from commit 20a080c2e9139db79842f3ef98f1833d3fd98fc7)

--- a/core/themes/claro/css/components/tabs.css
+++ b/core/themes/claro/css/components/tabs.css
@@ -182,6 +182,7 @@
   }
   .is-horizontal .tabs {
     flex-direction: row;
+    align-items: flex-end;
     width: auto;
     margin: 0;
     border: 0;
