--- a/core/themes/claro/css/components/tabs.pcss.css
+++ b/core/themes/claro/css/components/tabs.pcss.css
@@ -164,6 +164,7 @@
   .is-horizontal {
     & .tabs {
       flex-direction: row;
+      align-items: flex-end;
       width: auto;
       margin: 0;
       border: 0;
